# notes-on-rust

./: .gitignore  Cargo.toml  README.md
language/01-hello-world/: main.rs
language/02-cargo-new/: README.md
language/03-folder-structure/: README.md
language/03-folder-structure/package-example/: Cargo.toml
language/03-folder-structure/package-example/src/: example.rs  main.rs
language/03-folder-structure/package-example/src/topics/: print.rs
language/04-basic-syntax/print-format/: Cargo.toml
language/04-basic-syntax/print-format/src/: main.rs
language/04-basic-syntax/variables/src/: main.rs
tooling/: cargo.md  editor.md  installation.md
